latex-first.tex uses math

--- a/tex/latex-first.tex
+++ b/tex/latex-first.tex
@@ -6,4 +6,8 @@
 \usepackage{hyperref}
 \begin{document}
 Hello world!
+
+This is a PDF made in \LaTeX on www.nyxassembly.com.
+
+Here is some math: $f(x)=\frac{1}{\sqrt{x}}$.
 \end{document}
